[WIP] mam update to v0.3

--- a/rel/files/ejabberd.cfg
+++ b/rel/files/ejabberd.cfg
@@ -533,6 +533,7 @@
 {access, mam_set_prefs, [{default, all}]}.
 {access, mam_get_prefs, [{default, all}]}.
 {access, mam_lookup_messages, [{default, all}]}.
+{access, mam_get_form_fields, [{default, all}]}.
 {access, mam_purge_single_message, [{default, all}]}.
 {access, mam_purge_multiple_messages, [{default, all}]}.
 
