enable travis deploy to githhub's releases

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ after_script:
 
 after_success:
         - make cover_report
-        - if [ $PRESET = 'internal_mnesia' ]; then tools/travis-build-and-push-docker.sh; fi
+        - if [ $PRESET = 'internal_mnesia' ] && [ $TRAVIS_OTP_RELEASE = "17.5" ] && [ $TRAVIS_PULL_REQUEST = 'false' ]; then tools/travis-build-and-push-docker.sh; fi
 
 services:
         - redis-server
@@ -39,12 +39,13 @@ branches:
         only:
                 - master
                 - stable
+                - /\d+\.\d+\.\d+(\-[a-z,0-9])*/
 
 otp_release:
         - 17.5
 env:
         - PRESET=internal_redis DB=mnesia REL_CONFIG=with-redis
-        - PRESET=internal_mnesia DB=mnesia REL_CONFIG=minimal
+        - PRESET=internal_mnesia DB=mnesia REL_CONFIG=full
         - PRESET=mysql_mnesia DB=mysql REL_CONFIG=with-mysql
         - PRESET=odbc_pgsql_mnesia DB=pgsql REL_CONFIG=with-odbc
         - PRESET=pgsql_mnesia DB=pgsql REL_CONFIG=with-pgsql
@@ -75,3 +76,12 @@ cache:
 before_cache:
         - rm -f dialyzer/apps.*
 
+deploy:
+  provider: releases
+  api-key: $GITHUB_TOKEN
+  skip_cleanup: true
+  file: mongooseim-$TRAVIS_BRANCH.$TRAVIS_OTP_RELEASE.$(lsb_release -is | tr "A-Z" "a-z").$(lsb_release -rs).$(uname -m).tar.bz2
+  on:
+    otp_release: 17.5
+    tags: true
+    condition: "$PRESET = internal_mnesia"
